# order_fast_api

./: .gitignore  README.md  alembic.ini  cloudflare.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml
app/: app_container.py  main.py
app/api/dto/: change_shop_owner_request.py  create_account_dto.py  create_product_dto.py  create_shop_request.py  login_dto.py  login_user_dto.py  product_dto.py  product_list_dto.py  shop_dto.py  shop_list_dto.py  todo_dto.py  update_product_dto.py  update_shop_request.py  user_list_dto.py  video_url.py
app/api/middleware/: jwt_middleware.py
app/api/v1/: router.py  v1_router.py
app/common/configuration/: global_exception_handler.py  jwt_middleware.py
app/common/middleware/: jwt_middleware.py
app/common/model/: app_config.py  user_info.py
app/common/util/: jwt_util.py  request_util.py
app/common/utils/: jwt_util.py
app/config/: app_config.py  app_container.py  global_exception_handler.py
app/configuration/: app_logger.py  global_exception_handler.py  jwt_middleware.py
app/core/config/: app_container.py
app/core/configuration/: global_exception_handler.py  (+1 more)
app/persistence/: db_session_manager.py  session_manager.py
app/schema/: create_account_request.py  create_account_response.py  create_user_request.py  create_user_response.py  todo_detail.py
app/utils/: dto_util.py  schema_util.py
migration/: env.py
migration/versions/: 91811f691691_initial_migration.py  a63bb34cdcc2_initial_migration.py  dc1bf580eb9f_initial_migration.py  e48a12275147_initial_migration.py  f98a8ac99779_initial_migration.py
(+52 files in other folders)
