[tool.poetry]
name = "order-fast-api"
version = "0.1.0"
description = ""
authors = ["Ali <ali.akbar@serafin-am.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
databases = "^0.9.0"
alembic = "^1.14.0"
dependency-injector = "^4.43.0"
pydantic-settings = "^2.6.1"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
pytest-asyncio = "^0.24.0"
asynctest = "^0.13.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
